--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "POPKID-MD",
+  "name": "ANDY-MD",
   "version": "3.0.0",
-  "description": "A WhatsApp Bot Created By Popkid",
+  "description": "A WhatsApp Bot Created By ANDY",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name ZIPPY-XTECH",
-    "stop": "pm2 stop ZIPPY-XTECH",
-    "restart": "pm2 restart ZIPPY-XTECH"
+    "start": "pm2 start index.js --deep-monitoring --attach --name ANDY-XTECH",
+    "stop": "pm2 stop ANDY-XTECH",
+    "restart": "pm2 restart ANDY-XTECH"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
