--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A WhatsApp Bot Created By ANDY",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name ANDY-XTECH",
-    "stop": "pm2 stop ANDY-XTECH",
-    "restart": "pm2 restart ANDY-XTECH"
+    "start": "pm2 start index.js --deep-monitoring --attach --name ANDY-MD",
+    "stop": "pm2 stop ANDY-MD",
+    "restart": "pm2 restart ANDY-MD"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
